--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,12 @@
     "name": "PRShield",
     "description": "GitHubのプルリクエスト作成時に、マージ先の確認を強制するChrome拡張機能です",
     "version": "0.0.1",
-    "manifest_version": 3
+    "manifest_version": 3,
+    
+    "content_scripts": [
+    {
+        "matches": ["*://github.com/*/*/compare/*..*"],
+        "js": ["content.js"]
+    }
+    ]
 }
