--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,8 @@
     "content_scripts": [
     {
         "matches": ["*://github.com/*/*/compare/*"],
-        "js": ["content.js"]
+        "js": ["content.js"],
+        "css": ["style.css"]
     }
     ]
 }
