--- a/manifest.json
+++ b/manifest.json
@@ -6,7 +6,7 @@
 
     "content_scripts": [
     {
-        "matches": ["*://github.com/*/*/compare/*"],
+        "matches": ["*://github.com/*/*"],
         "js": ["content.js"],
         "css": ["style.css"]
     }
