マージ時にも表示する対応

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-    "name": "PRShield",
+    "name": "PRGatekeeper",
     "description": "GitHubのプルリクエスト作成時に、マージ先の確認を強制するChrome拡張機能です",
     "version": "0.0.1",
     "manifest_version": 3,
