--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
-    "name": "PRGatekeeper",
+    "name": "PRShield",
     "description": "GitHubのプルリクエスト作成時に、マージ先の確認を強制するChrome拡張機能です",
-    "version": "0.0.1",
+    "version": "1.0.0",
     "manifest_version": 3,
 
     "content_scripts": [
